Set a fixed modal width to avoid bad layout shift and make it break to mobile mode earlier

--- a/src/frontendHighlighterApp/sass/app.scss
+++ b/src/frontendHighlighterApp/sass/app.scss
@@ -408,7 +408,7 @@ body {
 
 .edac-fixes-modal {
 	display: none;
-
+	width:650px;
 	-webkit-font-smoothing: antialiased !important;
 	-moz-osx-font-smoothing: grayscale !important;
 	background-color: #fff !important;
@@ -425,7 +425,7 @@ body {
 	text-align: left !important;
 	letter-spacing: initial !important;
 
-	@media screen and (max-width: $small-screen-width) {
+	@media screen and (max-width: $medium-screen-width) {
 		width: 100% !important;
 		max-width: calc(100% - 30px) !important;
 		padding: 20px !important;
@@ -475,8 +475,6 @@ body {
 
 			&--button--save {
 				@extend .edac-highlight-panel-description--button;
-
-
 			}
 		}
 
